feat: Calculadora IC proporcao funcionando

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 body {
-  background-color: #fef9f3; /* Bege claro */
+  background-color: #fff2e1; /* Bege claro */
 }
 
 .card {
