--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,22 @@ h1{
 @theme {
 
 }
+
+.modal-overlay {
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-content {
+  width: 30%;
+  background-color: white;
+  padding: 2rem;
+  border-radius: 5px;
+}
